--- a/RomandiaMaker 1.0.html
+++ b/RomandiaMaker 1.0.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<title>Grandes MiniVueltas ACB: RomandÌa '18</title>
+	<title>Grandes MiniVueltas ACB: Romand√≠a '18</title>
 	<style>
 	  	.buttons{
 	  		font-size:large;
@@ -55,11 +55,11 @@
 </head>
 <body>
 <center>
-<h1>Grandes MiniVueltas ACB: RomandÌa '18</h1>
+<h1>Grandes MiniVueltas ACB: Romand√≠a '18</h1>
 <br>
-<p class="labels">DivisiÛn: &#160
+<p class="labels">Divisi√≥n: &#160
 <select id="divisions" disabled onChange="getCredits(); sumPrices(); getRemaining(); printDorsal();">
-<option value="2000">Primera divisiÛn</option>
+<option value="2000">Primera divisi√≥n</option>
 </select></p>
 <p class="labels">Usuario:&#160
 <input id="user"></input></p>
@@ -145,8 +145,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -192,6 +191,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -212,7 +212,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -282,8 +282,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -329,6 +328,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -349,7 +349,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -419,8 +419,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -466,6 +465,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -486,7 +486,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -556,8 +556,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -603,6 +602,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -623,7 +623,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -693,8 +693,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -740,6 +739,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -760,7 +760,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -830,8 +830,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -877,6 +876,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -897,12 +897,12 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
 <option value="75" dorsal="161">Wyss, Danilo: 75</option>
-</tr><tr>
+/tr><tr>
 <td class="labels">C7 :&#160</td>
 <td><select id="rider7" onChange="getCredits(); sumPrices(); getRemaining(); printDorsal();">
 <option value="0" selected="selected">Selecciona un corredor</option>
@@ -967,8 +967,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -1014,6 +1013,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -1034,7 +1034,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -1104,8 +1104,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -1151,6 +1150,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -1171,7 +1171,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -1241,8 +1241,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -1288,6 +1287,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -1308,7 +1308,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -1378,8 +1378,7 @@
 <option value="300" dorsal="619">Gaviria, Fernando: 300</option>
 <option value="75" dorsal="297">Gebreigzabhier, Amanuel: 75</option>
 <option value="100" dorsal="800">Geschke, Simon: 100</option>
-<option value="50" dorsal="775">Golas, Michal: 50</option>
-<option value="100" dorsal="702">GonÁalves, JosÈ: 100</option>
+<option value="100" dorsal="702">Gon√ßalves, Jos√©: 100</option>
 <option value="125" dorsal="20">Gougeard, Alexis: 125</option>
 <option value="75" dorsal="73">Grivko, Andriy: 75</option>
 <option value="100" dorsal="833">Grmay, Tsgabu: 100</option>
@@ -1425,6 +1424,7 @@
 <option value="150" dorsal="788">Rosa, Diego: 150</option>
 <option value="200" dorsal="588">Roson, Jaime: 200</option>
 <option value="100" dorsal="152">Rosskopf, Joseph: 100</option>
+<option value="75" dorsal="789">Rowe, Luke: 75</option>
 <option value="100" dorsal="632">Sabatini, Fabio: 100</option>
 <option value="50" dorsal="185">Schillinger, Andreas: 50</option>
 <option value="100" dorsal="187">Selig, Rudiger: 100</option>
@@ -1445,7 +1445,7 @@
 <option value="75" dorsal="313">Venter, Jaco: 75</option>
 <option value="100" dorsal="566">Verona, Carlos: 100</option>
 <option value="150" dorsal="817">Vervaeke, Louis: 150</option>
-<option value="50" dorsal="407">Vincent, LÈo: 50</option>
+<option value="50" dorsal="407">Vincent, L√©o: 50</option>
 <option value="300" dorsal="639">Viviani, Elia: 300</option>
 <option value="50" dorsal="747">Wagner, Robert: 50</option>
 <option value="50" dorsal="526">Wouters, Enzo: 50</option>
@@ -1462,10 +1462,10 @@
 <button class="buttons">Copiar lista</button>
 <br>
 <br>
-<p class="info">* Enviar por mail: Rellena tu nombre de usuario en el Foro y selecciona los 9 corredores (reserva opcional). Tras ello, haz clic en el botÛn en tu mÛvil o PC con cliente de correo predefinido (si tienes) y rellenar· autom·ticamente el mail que debes mandar. Revisa la selecciÛn y envÌa el correo.
+<p class="info">* Enviar por mail: Rellena tu nombre de usuario en el Foro y selecciona los 9 corredores (reserva opcional). Tras ello, haz clic en el bot√≥n en tu m√≥vil o PC con cliente de correo predefinido (si tienes) y rellenar√° autom√°ticamente el mail que debes mandar. Revisa la selecci√≥n y env√≠a el correo.
 <br>
 <br>
-* Copiar lista: Copiar· tu selecciÛn al portapapeles.</p>
+* Copiar lista: Copiar√° tu selecci√≥n al portapapeles.</p>
 <br>
 
 
@@ -1484,10 +1484,10 @@
 	var remaining = 0;
 	var repeated = false;
 
-	var budgetError = "AtenciÛn: Te has pasado de presupuesto."
-	var repeatedError = "AtenciÛn: Ciclistas repetidos.";
+	var budgetError = "Atenci√≥n: Te has pasado de presupuesto."
+	var repeatedError = "Atenci√≥n: Ciclistas repetidos.";
 	var userError = "Introduce tu usuario del foro ACB.";
-	var divError = "Selecciona una divisiÛn.";
+	var divError = "Selecciona una divisi√≥n.";
 
 
 	function getCredits()
